force-app/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <description>Record of any gifts given to brand representatives</description>
    <label>Gift</label>
    <nameField>
        <label>Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>