force-app/main/default/objects/Gift__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Deal__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>