force-app/main/default/objects/Gift__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <inlineHelpText>Enter the date the gift was sent</inlineHelpText>
    <label>Date Sent</label>
    <type>Date</type>
</CustomField>