force-app/main/default/objects/Gift__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <inlineHelpText>The master deal for this gift</inlineHelpText>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gifts</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>