force-app/main/default/objects/Gift__c/fields/Gift_Description__c.field-meta.xml
<CustomField>
    <fullName>Gift_Description__c</fullName>
    <inlineHelpText>Describe the gift</inlineHelpText>
    <label>Gift Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>