force-app/main/default/objects/Gift__c/fields/Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value__c</fullName>
    <inlineHelpText>Enter the value of the gift</inlineHelpText>
    <label>Gift Value</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>