force-app/main/default/objects/Gift__c/fields/Multi_Deal_Gift__c.field-meta.xml
<CustomField>
    <fullName>Multi_Deal_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if this gift has been given as part of a multi deal completion</inlineHelpText>
    <label>Multi Deal Gift</label>
    <type>Checkbox</type>
</CustomField>