force-app/main/default/objects/Gift__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Select the reason for the gift</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Store opening</fullName>
            </value>
            <value>
                <fullName>Shop refit</fullName>
            </value>
            <value>
                <fullName>Contract renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>