force-app/main/default/objects/Gift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Date_Sent__c</columns>
    <columns>Gift_Description__c</columns>
    <columns>Currency__c</columns>
    <columns>Gift_Value__c</columns>
    <columns>Multi_Deal_Gift__c</columns>
    <columns>Reason__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>